--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "remotion-gtts-template",
-  "version": "1.0.0",
-  "description": "My Remotion video",
-  "scripts": {
-    "start": "remotion preview",
-    "build": "remotion render HelloWorld out/video.mp4",
-    "upgrade": "remotion upgrade",
-    "test": "eslint src --ext ts,tsx,js,jsx && tsc"
-  },
-  "repository": {},
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "@remotion/eslint-config": "^3.0.0",
-    "@types/md5": "^2.3.0",
-    "@types/react": "^18.0.26",
-    "eslint": "^8.30.0",
-    "prettier": "^2.8.1",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.9.4"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.17.0",
-    "@google-cloud/text-to-speech": "^4.2.1",
-    "@remotion/cli": "3.3.82",
-    "@types/express": "^4.17.17",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "firebase": "^9.19.1",
-    "md5": "^2.3.0",
-    "microsoft-cognitiveservices-speech-sdk": "^1.17.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remotion": "3.3.82"
-  },
-  "packageManager": "npm@8.19.2"
+	"name": "remotion-gtts-template",
+	"version": "1.0.0",
+	"description": "My Remotion video",
+	"scripts": {
+		"start": "npm run audioserver & remotion preview",
+		"build": "remotion render HelloWorld out/video.mp4",
+		"audioserver": "ts-node src/server/index.ts",
+		"upgrade": "remotion upgrade",
+		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
+	},
+	"repository": {},
+	"license": "UNLICENSED",
+	"devDependencies": {
+		"@remotion/eslint-config": "^3.0.0",
+		"@types/md5": "^2.3.0",
+		"@types/react": "^18.0.26",
+		"eslint": "^8.30.0",
+		"prettier": "^2.8.1",
+		"ts-node": "^10.0.0",
+		"typescript": "^4.9.4"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.17.0",
+		"@google-cloud/text-to-speech": "^4.2.1",
+		"@remotion/cli": "3.3.82",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"express-rate-limit": "^6.7.0",
+		"firebase": "^9.19.1",
+		"md5": "^2.3.0",
+		"microsoft-cognitiveservices-speech-sdk": "^1.17.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"remotion": "3.3.82"
+	},
+	"packageManager": "npm@8.19.2"
 }
