--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
 	"version": "1.0.0",
 	"description": "My Remotion video",
 	"scripts": {
-		"start": "npm run audioserver & remotion preview",
-		"build": "npm run audioserver & sleep 5; remotion render HelloWorld out/video.mp4; pkill -f \"npm run audioserver\"",
-		"audioserver": "ts-node src/server/index.ts",
+		"start": "ts-node src/preview.ts",
+		"build": "ts-node src/render.ts",
 		"upgrade": "remotion upgrade",
 		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
 	},
@@ -23,6 +22,8 @@
 	"dependencies": {
 		"@google-cloud/text-to-speech": "^4.2.1",
 		"@remotion/cli": "4.0.0-alpha.185+1b8f0e746",
+		"@remotion/bundler": "4.0.0-alpha.185+1b8f0e746",
+		"@remotion/renderer": "4.0.0-alpha.185+1b8f0e746",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"cors": "^2.8.5",
