--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@remotion/eslint-config": "4.0.0-alpha.185+1b8f0e746",
 		"@types/md5": "^2.3.0",
 		"@types/react": "^18.0.26",
+		"@types/node": "^18.15.11",
 		"eslint": "^8.30.0",
 		"prettier": "^2.8.1",
 		"ts-node": "^10.0.0",
