--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	"devDependencies": {
 		"@remotion/eslint-config": "4.0.0-alpha.185+1b8f0e746",
 		"@types/md5": "^2.3.0",
-		"@types/react": "^18.0.26",
 		"@types/node": "^18.15.11",
+		"@types/react": "^18.0.26",
 		"eslint": "^8.30.0",
 		"prettier": "^2.8.1",
 		"ts-node": "^10.0.0",
@@ -22,9 +22,10 @@
 	},
 	"dependencies": {
 		"@google-cloud/text-to-speech": "^4.2.1",
-		"@remotion/cli": "4.0.0-alpha.185+1b8f0e746",
 		"@remotion/bundler": "4.0.0-alpha.185+1b8f0e746",
+		"@remotion/cli": "4.0.0-alpha.185+1b8f0e746",
 		"@remotion/renderer": "4.0.0-alpha.185+1b8f0e746",
+		"@tanstack/react-query": "^4.29.5",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"cors": "^2.8.5",
