--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"devDependencies": {
-		"@remotion/eslint-config": "4.0.0-alpha5",
+		"@remotion/eslint-config": "4.0.0-alpha16",
 		"@types/md5": "^2.3.0",
 		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.26",
@@ -22,10 +22,10 @@
 	},
 	"dependencies": {
 		"@google-cloud/text-to-speech": "^4.2.1",
-		"@remotion/bundler": "4.0.0-alpha5",
-		"@remotion/cli": "4.0.0-alpha5",
-		"@remotion/renderer": "4.0.0-alpha5",
-		"@remotion/zod-types": "^4.0.0-alpha5",
+		"@remotion/bundler": "4.0.0-alpha16",
+		"@remotion/cli": "4.0.0-alpha16",
+		"@remotion/renderer": "4.0.0-alpha16",
+		"@remotion/zod-types": "4.0.0-alpha16",
 		"@tanstack/react-query": "^4.29.5",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
@@ -36,7 +36,7 @@
 		"md5": "^2.3.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"remotion": "4.0.0-alpha5",
+		"remotion": "4.0.0-alpha16",
 		"zod": "^3.21.4"
 	}
 }
