--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@remotion/cli": "4.0.0-alpha16",
 		"@remotion/renderer": "4.0.0-alpha16",
 		"@remotion/zod-types": "4.0.0-alpha16",
+		"@remotion/media-utils": "4.0.0-alpha16",
 		"@tanstack/react-query": "^4.29.5",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
