--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.26",
 		"eslint": "^8.43.0",
-		"prettier": "^2.8.8",
+		"prettier": "^3.2.5",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
+		"typescript": "^5.4.5"
 	},
 	"dependencies": {
 		"@google-cloud/text-to-speech": "^4.2.1",
@@ -37,6 +37,6 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"remotion": "^4.0.0",
-		"zod": "^3.21.4"
+		"zod": "3.22.3"
 	}
 }
