--- a/.github/workflows/render-video.yml
+++ b/.github/workflows/render-video.yml
@@ -26,12 +26,21 @@ jobs:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
       - run: npm run build -- --props="./input-props.json"
         env:
-          AZURE_TTS_KEY: ${{secrets.AZURE_TTS_KEY}}
-          AZURE_TTS_REGION: ${{secrets.AZURE_TTS_REGION}}
-          AWS_S3_BUCKET_NAME: ${{secrets.AWS_S3_BUCKET_NAME}}
-          AWS_S3_REGION: ${{secrets.AWS_S3_REGION}}
-          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+            SERVER_PORT: ${{secrets.SERVER_PORT}}
+            FIREBASE_API_KEY: ${{secrets.FIREBASE_API_KEY}}
+            FIREBASE_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
+            FIREBASE_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
+            FIREBASE_STORAGE_BUCKET: ${{secrets.FIREBASE_STORAGE_BUCKET}}
+            FIREBASE_MESSAGING_SENDER_ID: ${{secrets.FIREBASE_MESSAGING_SENDER_ID}}
+            FIREBASE_APP_ID: ${{secrets.FIREBASE_APP_ID}}
+            GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+
+            # NOT REQUIRED IF YOU USE `GOOGLE_APPLICATION_CREDENTIALS`
+
+            # GOOGLE_CLOUD_PRIVATE_KEY: ${{secrets.GOOGLE_CLOUD_PRIVATE_KEY}}
+            # GOOGLE_CLOUD_CLIENT_EMAIL: ${{secrets.GOOGLE_CLOUD_CLIENT_EMAIL}}
+            # GOOGLE_CLOUD_CLIENT_ID: ${{secrets.GOOGLE_CLOUD_CLIENT_ID}}
+
       - uses: actions/upload-artifact@v2
         with:
           name: out.mp4
