--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "remotion-gtts-template",
+	"name": "template-tts-google",
 	"version": "1.0.0",
 	"description": "My Remotion video",
 	"scripts": {
@@ -12,31 +12,32 @@
 	"license": "UNLICENSED",
 	"devDependencies": {
 		"@remotion/eslint-config": "^4.0.0",
-		"@types/md5": "^2.3.0",
-		"@types/node": "^18.15.11",
-		"@types/react": "^18.0.26",
-		"eslint": "^8.43.0",
-		"prettier": "^3.2.5",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.4.5"
+		"@types/md5": "2.3.0",
+		"@types/node": "20.14.11",
+		"@types/react": "18.3.1",
+		"eslint": "8.56.0",
+		"prettier": "3.2.5",
+		"ts-node": "10.9.1",
+		"typescript": "5.3.3"
 	},
 	"dependencies": {
-		"@google-cloud/text-to-speech": "^4.2.1",
+		"@google-cloud/text-to-speech": "4.2.1",
 		"@remotion/bundler": "^4.0.0",
 		"@remotion/cli": "^4.0.0",
 		"@remotion/renderer": "^4.0.0",
 		"@remotion/zod-types": "^4.0.0",
 		"@remotion/media-utils": "^4.0.0",
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"firebase": "^9.19.1",
-		"md5": "^2.3.0",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
+		"@types/cors": "2.8.13",
+		"@types/express": "4.17.13",
+		"cors": "2.8.5",
+		"dotenv": "16.0.3",
+		"express": "4.17.1",
+		"firebase": "9.19.1",
+		"md5": "2.3.0",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
 		"remotion": "^4.0.0",
 		"zod": "3.22.3"
-	}
+	},
+	"private": true
 }
